bk_ida/gccida/g3/find_equiv_reg
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_equiv_reg/src/reload.c:6780:19: error: conflicting types for 'find_equiv_reg'
 struct rtx_def * find_equiv_reg( 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_equiv_reg/src/reload.h:326:12: note: previous declaration is here
extern rtx find_equiv_reg PARAMS ((rtx, rtx, enum reg_class, int, short *,
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_equiv_reg/src/reload.c:6797:4: error: expected ';' after expression
rtx v17; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_equiv_reg/src/reload.c:6797:5: error: use of undeclared identifier 'v17'
rtx v17; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_equiv_reg/src/reload.c:6800:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_equiv_reg/src/reload.c:6800:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_equiv_reg/src/reload.c:6803:4: error: expected ';' after expression
rtx v23; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_equiv_reg/src/reload.c:6803:5: error: use of undeclared identifier 'v23'
rtx v23; // rdi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_equiv_reg/src/reload.c:6810:4: error: expected ';' after expression
rtx v30; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_equiv_reg/src/reload.c:6810:5: error: use of undeclared identifier 'v30'; did you mean 'v10'?
rtx v30; // rax 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_equiv_reg/src/reload.c:6790:9: note: 'v10' declared here
__int16 v10; // ax 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_equiv_reg/src/reload.c:6835:4: error: expected ';' after expression
rtx v56; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_equiv_reg/src/reload.c:6835:5: error: use of undeclared identifier 'v56'
rtx v56; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_equiv_reg/src/reload.c:6842:6: error: use of undeclared identifier 'v63'
rtx *v63; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_equiv_reg/src/reload.c:6845:4: error: expected ';' after expression
rtx v66; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_equiv_reg/src/reload.c:6845:5: error: use of undeclared identifier 'v66'
rtx v66; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_equiv_reg/src/reload.c:6874:6: error: use of undeclared identifier 'v95'
rtx *v95; // rcx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_equiv_reg/src/reload.c:6877:4: error: expected ';' after expression
rtx v98; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_equiv_reg/src/reload.c:6877:5: error: use of undeclared identifier 'v98'
rtx v98; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_equiv_reg/src/reload.c:6925:4: error: expected ';' after expression
rtx ina; // [rsp+20h] [rbp-68h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_equiv_reg/src/reload.c:6925:5: error: use of undeclared identifier 'ina'; did you mean 'in'?
rtx ina; // [rsp+20h] [rbp-68h] 
    ^~~
    in
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_equiv_reg/src/reload.c:6781:5: note: 'in' declared here
rtx in, 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_equiv_reg/src/obj/reload.o] Error 1
